--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,13 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
+  dio_http_formatter: ^2.1.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
 
 dev_dependencies:
-
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
