--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
   sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
+  animate_do: ^2.1.0
+  cached_network_image: ^3.2.2
+  carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^4.0.6
@@ -18,6 +21,8 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   get_it: ^7.2.0
+  google_fonts: ^3.0.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
